# minecraft_analytics

./: .gitignore  .gitmodules  NOTES.md  README.md  invoke.yaml  pyproject.toml
analysis/: analysis_code.py
assets/: color_palette.txt
config/superlog/: log_player_movement.yml
config/superlog/SuperLog/: README.md
documentation/: participant_documentation.md
instruments/: collaboration_quality.md
lib/: joint_attention.py  joint_attention_dbscan.py  log_reader.py  metadata.py
lib/analysis/: __init__.py  base.py  dyad_triad_jva.py  joint_attention.py  multimodal_collaboration.py
lib/logs/: collaboration.py  minecraft_block.py  reader.py  selection.py  testing.py
lib/segment/: __init__.py  product.py  source.py
lib/segment/product/: __init__.py  audio.py  base.py  cross_recurrence.py  cross_recurrence_augmented.py  joint_attention.py  logs.py  trace.py  transcript.py  video.py
lib/segment/product/simulation/: __init__.py  anvil_reader.py  mc_world.py  op_reader.py  test.py  voxel_geometry.py
lib/segment/product/simulation/deprecated/: vectors.py
lib/segment/product/simulation/html/: template.html
lib/segment/product/simulation/js/: bundle.js  jva.js  layers.js  main-old.js  main.js  op.js  package-lock.json  package.json  player.js  rollup.config.js  simulation.js  study_cubes.js  study_data.json  study_geometry.js  template.html  timeline.js  voxel.js  voxel_chunk.js  voxel_world.js
participants/documentation/: participant_documentation.md
server/config/superlog/: log_player_movement.yml
server/config/superlog/SuperLog/: pom.xml
tasks/: __init__.py
tutorial/: pandas_tutorial.ipynb
(+9 files in other folders)
