[project]
name = "minecraft_analytics"
version = "0.2.0"
description = "Tools for Minecraft research"
authors = [
    {name = "Chris Proctor", email = "chris@chrisproctor.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
